2006-04-23  Neal H. Walfield  <neal@gnu.org>

	* day_render.c (gtk_day_render_base_class_init): Set
	widget_class->size_request to GTK_DAY_RENDER_SIZE_REQUEST.
	(gtk_day_render_size_request): New function, calculate
	DAY_RENDER->ROW_HEIGHT_MIN here.
	(gtk_day_render_expose): Calculate time_width here as required.
	Rearrange code so that there is no penalty.
	(gtk_day_render_update_extents): Don't calc
	DAY_RENDER->ROW_HEIGHT_MIN or DAY_RENDER->TIME_WIDTH here.  Don't
	request a window size unless the widget has already received a
	size request event.

2006-04-22  Neal H. Walfield  <neal@gnu.org>

	* gtkdatesel.c (struct _GtkDateSel): Remove fields day_width,
	month_width, year_width, week_width.

	(get_max_month_width): Remove function.
	(gtk_date_sel_set_month_style): Don't call get_max_month_width.

	(month): New function.
	(GTK_TYPE_MONTH_CELL_RENDERER): New macro.
	(MonthCellRendererClass): New structure.
	(MonthCellRenderer): Likewise.
	(month_cell_renderer_get_type): New function.
	(month_cell_renderer_class_init): Likewise.
	(month_cell_renderer_finalize): Likewise.
	(get_layout): Likewise.
	(month_cell_renderer_get_size): Likewise.
	(month_cell_renderer_render): Likewise.
	(month_cell_renderer_new): Likewise.
	(month_cell_data_func): Change to use the MonthCellRenderer.
	(gtk_date_sel_new): Use a MonthCellRenderer, not a GtkListStore.

2006-04-17  Neal H. Walfield  <neal@gnu.org>

	* month_view.c (draw_expose_event): Turn word wrap off when
	vertical space is at a premium.

2006-04-17  Neal H. Walfield  <neal@gnu.org>

	* day_render.c (struct _GtkDayRender): Add field hour_bar_pos.
	Rename row_height to row_height_min and update users.
	(HOUR_BAR_HEIGHT): New macro.
	(hour_bar_calc): New function.
	(hour_bar_move): Don't simply queue a redraw: calculate where the
	hour bar will be and save it in DAY_RENDER->HOUR_BAR_POS.  Only
	redraw the areas that are damaged.  Only return TRUE if the hour
	bar still needs to be drawn.